# logicsponge-core

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  benchmark.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  tox.ini
.github/workflows/: static-analysis.yaml  test.yaml
benches/: channel_benchmark.rs
benchmarks/: README.md  __init__.py  benchmark_core.py  benchmark_memory.py  benchmark_scalability.py  benchmark_streaming.py  benchmark_thread_pool.py  benchmark_throughput.py  run_benchmarks.py  threading_analysis.md
datasponge/: __init__.py  dashboard.py  file.py  plot.py  source.py  stats.py
datasponge/core/: dashboard.py  datasponge.py  file.py  plot.py  source.py  stats.py
logicsponge/core/: __init__.py  dashboard.py  datastructures.py  executor.py  file.py  flow_backend.py  graph.py  logicsponge.py  plot.py  source.py  stats.py  thread_pool.py
logicsponge/core/assets/: custom-script.js  typography.css
python/logicsponge/: core_rs.pyi
python/logicsponge/core/: __init__.py  dashboard.py  logicsponge.py  stats.py
src/: channel.rs  lib.rs
tests/: run_examples.py  run_with_hook.py  test.csv  test_channel.py  test_connect_output_to.py  test_csv.py  test_dataitem.py  test_datastreamview.py  test_drop.py  test_dynamic.py  test_flow_backend.py  test_iterablesource.py  test_join.py  test_linearizer.py  test_mergetosinglestream.py  test_queue.py  test_sources.py  test_stop.py  test_terms.py
