[package]
name = "core_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "core_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
delegate = "0.13.3"

[dependencies.pyo3]
version = "0.25.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[package.metadata.maturin]
include = ["src/logicsponge_core.pyi"]

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
crossbeam = "0.8.4"
flume = "0.11.1"

[[bench]]
name = "channel_benchmark"
harness = false
