[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "logicsponge-core"
dynamic = ["version", "dependencies"]
requires-python = ">=3.11"
authors = [
  { name = "Benedikt Bollig", email = "bollig@lmf.cnrs.fr" },
  { name = "Matthias Függer", email = "mfuegger@lmf.cnrs.fr" },
  { name = "Thomas Nowak", email = "thomas@thomasnowak.net" },
]
maintainers = [
  { name = "Benedikt Bollig", email = "bollig@lmf.cnrs.fr" },
  { name = "Matthias Függer", email = "mfuegger@lmf.cnrs.fr" },
  { name = "Thomas Nowak", email = "thomas@thomasnowak.net" },
]
description = "A real-time data processing pipeline"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["real-time", "data processing", "time series"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]

[project.urls]
Repository = "https://github.com/innatelogic/logicsponge-core.git"

[tool.hatch.metadata]
core-metadata-version = "2.4"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["logicsponge"]

[tool.pyright]
venvPath = "."
venv = "venv"
typeCheckingMode = "standard"
reportGeneralTypeIssues = true
reportOptionalSubscript = true
# reportUnknownParameterType = true
# reportUnknownVariableType = true
reportUninitializedVariable = true
reportUnusedVariable = true

[tool.ruff]
line-length = 120
lint.select = ["ALL"]
lint.ignore = ["COM812", "CPY001", "D203", "D213", "ERA001", "FIX", "ISC001", "TD002", "TD003"]

[tool.ruff.lint.per-file-ignores]
"**/examples/*" = ["INP001", "T201"]
"**/tests/**/*" = ["INP001", "PLC1901", "PLR2004", "PLR6301", "S", "TID252"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["logicsponge"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80
