[build-system]
requires = ["maturin"]
build-backend = "maturin"

[project]
name = "logicsponge-core"
dynamic = ["version"]
requires-python = ">=3.11"
authors = [
  { name = "Benedikt Bollig", email = "bollig@lmf.cnrs.fr" },
  { name = "Matthias Függer", email = "mfuegger@lmf.cnrs.fr" },
  { name = "Thomas Nowak", email = "thomas@thomasnowak.net" },
]
maintainers = [
  { name = "Benedikt Bollig", email = "bollig@lmf.cnrs.fr" },
  { name = "Matthias Függer", email = "mfuegger@lmf.cnrs.fr" },
  { name = "Thomas Nowak", email = "thomas@thomasnowak.net" },
]
description = "A real-time data processing pipeline"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["real-time", "data processing", "time series"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Rust",
]
dependencies = [
  "frozendict",
  "readerwriterlock",
  "numpy",
  "scipy",
  "dash",
  "dash-bootstrap-components",
  "dash-svg",
  "matplotlib",
  "plotly",
  "chardet",
  "gdown",
  "watchdog",
]


[project.urls]
Repository = "https://github.com/innatelogic/logicsponge-core.git"

[tool.maturin]
python-source = "python"
module-name = "logicsponge.core_rs"
include = ["python/logicsponge/core_rs.pyi"]

[tool.ruff]
line-length = 120
lint.select = ["ALL"]
lint.ignore = ["COM812", "CPY001", "D203", "D213", "ERA001", "FIX", "ISC001", "TD002", "TD003"]

[tool.ruff.lint.per-file-ignores]
"**/examples/*" = ["INP001", "T201"]
"**/tests/**/*" = ["INP001", "PLC1901", "PLR2004", "PLR6301", "S", "TID252"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["logicsponge"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80
